src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A34.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A34 {
  class A {
    / String a = null;
    / String b = "b";
    / int c = 1;
  }
}
